Changed city headings

--- a/index.html
+++ b/index.html
@@ -78,14 +78,14 @@ li a:hover {
 <br/>
 <button onclick="myFunction()";  id="aButton">Hide elements</button>
 
-<h2 class="city">London</h2>
-<p>London is the capital of England.</p>
+<h2 class="city">Dank</h2>
+<p>iS wHaT lUkE WouLD Say</p>
 
-<h2 class="city">Paris</h2>
-<p>Paris is the capital of France.</p>
+<h2 class="city">Memes</h2>
+<p>Could be a currency</p>
 
-<h2 class="city">Tokyo</h2>
-<p>Tokyo is the capital of Japan.</p>
+<h2 class="city">Bad</h2>
+<p>Most prequel memes are</p>
 
 
 
