--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@ li a:hover {
   <li><a href="#news">Bulletin</a></li>
   <li><a href="https://rds.kes.net/rdweb">RemoteApp</a></li>
   <li><a href="https://login.microsoftonline.com/">Webmail</a></li>
-  <li><a href="#about">Calender</a></li>
-  <li><a href="#about">Contacts</a></li>
+  <li><a href="#Dont work">Calender</a></li>
+  <li><a href="#Contacts">Contacts</a></li>
   
 </ul>
 <br/>
