--- a/Contacts.html
+++ b/Contacts.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <a href="Amazing web page.html"> Back </a>
+    <a href="index.html"> Back </a>
     <p> Sean Mata 14smata@kes.net</p>
 </body>
 
